Style Fix, make list wrapper fixed for better viewing on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
+html {
+    border: 5px solid rgb(236, 99, 55);
+}
 body {
     position: relative;
     font-family: arial;
     background: rgb(255, 213, 205);
     margin: 0 auto;
     padding: 0;
-    border: 5px solid rgb(236, 99, 55);
     min-width: 1300px;
 }
 
@@ -120,7 +122,7 @@ body {
 
 /*******************************************************************************
 
-                                                                                GAME
+                                        GAME
 
 *******************************************************************************/
 #boardWrapper {
@@ -133,10 +135,11 @@ body {
 
 #listWrapper {
     display:block;
-    position:relative;
+    position:fixed;
     box-sizing:border-box;
     background-color: white;
     border:1px solid black;
+    min-width:270px;
     width:20%;
     float:left;
 }
@@ -146,7 +149,7 @@ body {
     position:relative;
     box-sizing:border-box;
     background-color: white;
-    margin-left:2%;
+    margin-left:22%;
     border:1px solid black;
     width:78%;
     float:left;
@@ -205,8 +208,9 @@ body {
 }
 .score {
     position:absolute;
-    top:15px;
-    right: 20px;
+    top:0px;
+    right: 10px;
+    padding:15px 10px;
     cursor:pointer;
 }
 .score img {
@@ -221,32 +225,43 @@ body {
     outline: none;
 }
 
-
 #gameFunctions {
-    position:relative;
-    left:10px;
+    position: relative;
+    margin-top: 50px;
+    width: 100%;
+    float: left;
+    clear: both;
 }
 
+#gameCodeWrapper {
+    display:inline-block;
+    position:relative;
+    background-color:white;
+    margin:10px;
+    padding:20px;
+    border:1px solid black;
+    width: 16%;
+}
 #gameCode {
     position:relative;
     letter-spacing:2px;
-    font-size:1.8em;
+    font-size:2.8em;
+    vertical-align: sub;
 }
 
-#newGameWrapper {
+#currentGameFunctions {
+    display:inline-block;
     position:relative;
-    top:50px;
-    clear:both;
+    margin:10px;
+    width:65%;
 }
 
-#newGame {
-    position: absolute;
-    right: 100px;
+#currentGameButtonsWrapper {
+    position:relative;
 }
 
 #startTimer {
     position:relative;
-    margin-left:120px;
 }
 
 #rollDice {
@@ -254,8 +269,10 @@ body {
 }
 
 #diceRollResult {
-    display:inline-block;
+    position:absolute;;
     background-color: white;
+    left: 140px;
+    margin-top: -70px;
     padding: 12px 15px;
     border-radius: 10px;
     border: 3px solid black;
@@ -264,4 +281,13 @@ body {
     text-transform: uppercase;
     text-align:center;
     width:15px;
+}
+
+#newGameFunctions {
+    display:inline-block;
+    position:relative;
+    width:10%;
+}
+#newGame {
+    
 }
